<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="permission_preload_label">Preload results</string>
    <string name="app_name">功耗测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Setting Time</string>
    <string name="start_test">开始测试</string>
    <string name="setting">设置</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="test_head_screen">测试屏幕</string>
    <string name="option_1">屏幕亮度最大时长：</string>
    <string name="option_2">灭屏时长</string>
    <string name="second">s</string>
    
    <string name="option_record">录音测试最大时长：</string>
    <string name="record_head">录音测试</string>
    <string name="record_status_ready">Ready</string>
    <string name="record_status_recording">"Recording..."</string>
    <string name="record_status_stop">Stop</string>
    
    <string name="option_flashlight">手电筒打开最大时长：</string>
    <string name="flashlight_head">手电筒测试</string>
    <string name="flashlight_status_close">关闭</string>
    <string name="flashlight_status_open">打开</string>
    
    <string name="fm_head">"FM test :play station 108.0fm 10s"</string>
    
    <string name="option_vibrator">震动最大时长：</string>
    <string name="vibrator_head">Vibrator test</string>
    
    <string name="bluetooth_head">Bluetooth test</string>
    <string name="bluetooth_search">Bluetooth search</string>
    <string name="wifi_head">WIFI test</string>
    
    <string name="option_playmp3">音乐播放时间：</string>
    <string name="playmp3_head">Play Music Test</string>
    <string name="normal_mode">Normal mode</string>
    <string name="airplane_mode">Airplane mode</string>
    
    <string name="option_playmp4">视频播放时间：</string>
    <string name="playmp4_head">Play MP4 Test</string>
    <string name="camera_head">Camera Test</string>
    
    <string name="gps_head">GPS Test</string>
    
    <string name="option_flight">飞行模式打开时长：</string>
    <string name="flight_head">飞行模式测试</string>
    <string name="flight_status">状态:\n</string>
    
    <string name="option_gesture">手势打开时长：</string>
    <string name="gesture_head">手势测试</string>
    <string name="gesture_status">手势的状态:\n</string>
</resources>
